added more dependencies to the env

--- a/toxo_env.yml
+++ b/toxo_env.yml
@@ -8,4 +8,10 @@ channels:
   - conda-forge
 dependencies:
   - snakemake
+  - salmon
+  - cd-hit
+  - trimmomatic
+  - trinity
+  - blast
+  - hmmer
   - python
