--- a/config.yaml
+++ b/config.yaml
@@ -1,2 +1,4 @@
 transcriptome: /path/to/transcriptome.fasta
 memory: 12 # memory in GB, might change later
+R1: /path/to/R1.fastq.gz
+R2: /path/to/R2.fastq.gz
