fixed minor issues, tested in dry run

--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,10 @@
-transcriptome: /path/to/transcriptome.fasta
+transcriptome: test/transcriptome.fasta
 basename: basename
 memory: 12 # memory in GB, might change later
 threads: 8 # logic threads, not physical cores, for clarity
-R1: /path/to/R1.fastq.gz
-R2: /path/to/R2.fastq.gz
-adapters: /path/to/adapters.fasta
-contaminants: /path/to/contaminats.fasta 
+R1: test/R1.fastq.gz
+R2: test/R2.fastq.gz
+adapters: test/adapters.fasta
+contaminants: test/contaminants.fasta 
 contamination_evalue: "1e-5"
+clustering_threshold: "0.9"
