ported split file for signalp and removed cd-hit on transcriptome since we are clustering the translated orfs

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-#transcriptome: test/transcriptome.fasta
+transcriptome: /home/labgen/Adamussium_colbecki.ORP.fasta
 basename: basename
 memory: 12 # memory in GB, might change later
 threads: 8 # logic threads, not physical cores, for clarity
