--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-transcriptome: /home/labgen/Adamussium_colbecki.ORP.fasta
+transcriptome: /home/labgen/github/DeTox/test_run/test/Alconium_acaule.ORP.fasta
 basename: basename
 memory: 12 # memory in GB, might change later
 threads: 8 # logic threads, not physical cores, for clarity
@@ -8,4 +8,5 @@ adapters: test/adapters.fasta
 contaminants: test/contaminants.fasta 
 contamination_evalue: "1e-5"
 clustering_threshold: "0.9"
+maxlen: 450
 signalp_path: ~/signalp-5.0b/bin/
