ported secretome extraction

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-transcriptome: /home/labgen/github/DeTox/test_run/test/Alconium_acaule.ORP.fasta
+transcriptome: test/transcriptome.fasta
 basename: basename
 memory: 12 # memory in GB, might change later
 threads: 8 # logic threads, not physical cores, for clarity
