--- a/config.yaml
+++ b/config.yaml
@@ -12,3 +12,4 @@ contamination_evalue: "1e-5"
 clustering_threshold: "0.9"
 maxlen: 450
 signalp_path: ~/signalp-5.0b/bin/
+wolfPsort_path: /WoLFPSort/bin/runWolfPsortSummary
