--- a/config.yaml
+++ b/config.yaml
@@ -13,3 +13,5 @@ clustering_threshold: "0.9"
 maxlen: 450
 signalp_path: ~/signalp-5.0b/bin/
 wolfPsort_path: /WoLFPSort/bin/runWolfPsortSummary
+quant: False
+blast_uniprot: False
