--- a/config.yaml
+++ b/config.yaml
@@ -11,7 +11,11 @@ toxins_evalue: "1e-10"
 contamination_evalue: "1e-5"
 clustering_threshold: "0.99"
 maxlen: 45000
+signalp_dvalue: "0.7"
 signalp_path: ~/signalp-5.0b/bin/
 wolfPsort_path: ~/WoLFPSort/bin/runWolfPsortSummary
 quant: False
-blast_uniprot: True
+wolfpsort: True
+swissprot: True
+swissprot_evalue: "1e-10"
+cys_pattern: True
