fix: bug fixes, added proteome and fastp features

--- a/toxo_env.yml
+++ b/toxo_env.yml
@@ -8,14 +8,14 @@ channels:
   - conda-forge
   - predector
 dependencies:
-  - snakemake
+  - snakemake=7.32.4
   - salmon
   - cd-hit
-  - trimmomatic
+  - fastp
   - trinity
   - blast
   - hmmer
-  - python
+  - python>=3.8
   - biopython
   - orfipy
   - phobius
