--- a/config.yaml
+++ b/config.yaml
@@ -1,25 +1,24 @@
-transcriptome: test/transcriptome.fasta
-output_dir: /path/outputDir
+transcriptome: path/to/transcriptome.fasta
+output_dir: TheOutputDirPath
 basename: basename
 memory: 12 # memory in GB, might change later
 threads: 8 # logic threads, not physical cores, for clarity
-R1: test/R1.fastq.gz
-R2: test/R2.fastq.gz
-adapters: test/adapters.fasta
-contaminants: test/contaminants.fasta 
-toxin_db: test/toxin_db.fasta
-pfam_db_path: test/Pfam-A.hmm
-swissprot_db_path: test/uniprot.fasta.gz
+R1: path/to/reads/R1.fastq
+R2: path/to/reads/R2.fastq # if paired-end reads
+contaminants: 
+proteome_fasta: #path/to/proteome.faa # if run in proteome mode
+toxin_db: path/to/Toxines-DB.fa
+pfam_db_path: 
+swissprot_db_path: 
 toxins_evalue: "1e-10"
 contamination_evalue: "1e-5"
 clustering_threshold: "0.99"
 maxlen: 45000
 signalp_dvalue: "0.7"
-signalp_path: ~/signalp-5.0b/bin/
 wolfPsort_path: ~/WoLFPSort/bin/runWolfPsortSummary
-quant: False
+quant: True
 TPMthreshold: "1000"
-wolfpsort: True
+wolfpsort: False
 swissprot: True
 swissprot_evalue: "1e-10"
 cys_pattern: True
